traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:60: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalDiagonal:61: error: not found: value cpt
    cpt+=1
    ^